@@ -1,22 +1,0 @@
-package org.apache.cayenne.swing.components;
-
-import javax.swing.text.AttributeSet;
-import javax.swing.text.BadLocationException;
-import javax.swing.text.PlainDocument;
-
-public class LimitedDocument extends PlainDocument {
-    private int limit;
-
-    LimitedDocument(int limit) {
-        super();
-        this.limit = limit;
-    }
-
-    public void insertString( int offset, String  str, AttributeSet attr ) throws BadLocationException {
-        if (str == null) return;
-
-        if ((getLength() + str.length()) <= limit) {
-            super.insertString(offset, str, attr);
-        }
-    }
-}
